# ai-news

./: .env.example  .gitignore  Cargo.toml  data.db.old  preview-private.html
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/generation/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  error.rs  filters.rs  main.rs  scheduler.rs  server_llm.rs
crates/server/src/handlers/: admin.rs  api.rs  auth.rs  mcp.rs  mod.rs  public.rs  remote.rs  user.rs
crates/server/src/models/: api_key.rs  app_settings.rs  article_interaction.rs  feed.rs  generated_article.rs  list.rs  mod.rs  session.rs  source_article.rs  user.rs
crates/server/src/services/: feed_fetcher.rs  feed_import.rs  feed_opml.rs  ingest.rs  mod.rs
migrations/: 20260401_000001_initial.sql  20260402_000002_sessions.sql  20260403_000003_rename_topic_to_category.sql  20260506_000004_lists.sql  20260507_000005_users.sql  20260615_000006_article_interactions.sql  20260701_000007_app_settings.sql  20260702_000008_user_language.sql  20260703_000009_user_auto_publish.sql  20260718_000010_api_keys.sql
src/: config.rs  db.rs  error.rs  main.rs  scheduler.rs
src/handlers/: admin.rs  api.rs  auth.rs  mod.rs  public.rs
src/models/: citation.rs  generated_article.rs  session.rs
src/services/: article_generator.rs  (+3 more)
static/: desk.js  style.css
templates/: article.html  base.html  datenschutz.html  import_errors.html  impressum.html  index.html  list.html  login.html  opml_import_errors.html  private_page.html  register.html  user_news.html  why_account.html
(+16 files in other folders)
