[package]
name = "ai-news-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
server-llm = ["dep:ai-news-generation"]

[dependencies]
ai-news-core = { path = "../core" }
ai-news-generation = { path = "../generation", optional = true }
axum = { version = "0.8", features = ["macros"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
tokio-cron-scheduler = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "2"
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
slug = "0.1"
time = "0.3"
